tests/rosetta/transpiler/OCaml/catmull-clark-subdivision-surface.error
exit status 2
File "/workspace/mochi/tests/rosetta/transpiler/OCaml/catmull-clark-subdivision-surface.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: "Catmull-clark-subdivision-surface" is not a valid module name.
File "/workspace/mochi/tests/rosetta/transpiler/OCaml/catmull-clark-subdivision-surface.ml", line 491, characters 18-37:
491 |   outputPoints := List.nth (!res) (0);
                        ^^^^^^^^^^^^^^^^^^^
Error: This expression has type Obj.t but an expression was expected of type
         (string * Obj.t) list list
